fixed horizontal scrolling issue

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -3,6 +3,11 @@
 @import url('http://fonts.googleapis.com/css?family=Titillium+Web:400,200');
 
 
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 body{
 
   font-family: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif;
